# plasmid_sequencing

./: README.md  pyproject.toml  requirements.txt
src/plasmid_sequencing/: __init__.py  canoncall.py  copy_files.py  delete_empty_dirs.py  demux.py  extract_histogram_stats.py  fastcat.py  filter_fastqs.py  flye.py  flye_polish.py  full_plasmid_workflow.py  gzip_fastqs.py  medaka.py  nest_file.py  porechop.py  rasusa.py  trycycler.py
src/plasmid_sequencing/archived/: separate_bam_by_bc.py
